Rename index.js to app.js and update package.json

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "jobzerr-automation",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
